fix css i broke for court timeslots

--- a/TeamProject/Areas/Admin/Views/Bookings/Delete.cshtml
+++ b/TeamProject/Areas/Admin/Views/Bookings/Delete.cshtml
@@ -48,9 +48,9 @@
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to Bookings", "Index")
-        </div>
+    <div class="form-actions no-color">
+        <input type="submit" value="Delete" class="btn btn-default" /> |
+        @Html.ActionLink("Back to Bookings", "Index", new { id = ViewBag.BranchId })
+    </div>
     }
 </div>
