--- a/TeamProject/Content/Site.css
+++ b/TeamProject/Content/Site.css
@@ -13,43 +13,59 @@
     text-align: center;
 }
 
-/*extra css*/
-.timeSlots td {
+/*for court timeslots*/
+.timeSlots td , .timeSlotsBooking td {
     margin: 5px;
     font-weight: bold;
-    /*justify-content: center;*/
     text-align: center;
-    width:12.5%
+    width: 12.5%
 }
 
-    .timeSlots td a[booked] {
-        display: inline-block;
-        padding-top: 20px;
-        padding-bottom: 20px;
-        width: 100%;
-        border-radius: .25em;
-        border: 1px solid rgba(0,0,0,.125);
-        font-weight: normal;
-        text-align: center;
-        color: blue;
-        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-        background: #deee86;
-        
-    }
-    .timeSlots td a[booked]:hover {
-        cursor:pointer;
-    }
-    .timeSlots td a:not([booked]) {
-        display: inline-block;
-        background: #F0F0F0;
-        padding-top: 20px;
-        padding-bottom: 20px;
-        width: 100%;
-        border-radius: .25em;
-        border: 1px solid rgba(0,0,0,.125);
-        font-weight: normal;
-        text-align: center;
-        box-shadow: none;
-    }
+.timeSlots td a {
+    display: inline-block;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    width: 100%;
+    border-radius: .25em;
+    border: 1px solid rgba(0,0,0,.125);
+    font-weight: normal;
+    text-align: center;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
 
 
+.timeSlots td a {
+    background: #deee86;
+}
+
+/*form bookings*/
+.timeSlotsBooking td a div[booked] {
+    display: inline-block;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    width: 100%;
+    border-radius: .25em;
+    border: 1px solid rgba(0,0,0,.125);
+    font-weight: normal;
+    text-align: center;
+    color: blue;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    background: #deee86;
+}
+
+.timeSlotsBooking td a[booked]:hover {
+    cursor: pointer;
+}
+
+.timeSlotsBooking td a[notbooked] {
+    display: inline-block;
+    background: #F0F0F0;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    width: 100%;
+    border-radius: .25em;
+    border: 1px solid rgba(0,0,0,.125);
+    font-weight: normal;
+    text-align: center;
+    box-shadow: none;
+}
